[package]
name = "bridge-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
dotenv.workspace = true
tokio.workspace = true
ethers-core.workspace = true
near-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
omni-types.workspace = true
nep141-connector = { path = "../bridge-sdk/connectors/nep141-connector" }
eth-connector = { path = "../bridge-sdk/connectors/eth-connector" }
evm-connector = { path = "../bridge-sdk/connectors/evm-connector" }
fast-bridge = { path = "../bridge-sdk/connectors/fast-bridge" }
solana-connector = { path = "../bridge-sdk/connectors/solana-connector" }
near-connector = { path = "../bridge-sdk/connectors/near-connector" }
